hphp/hack/test/typecheck/attributes/file_attributes_with_wrong_attribute_type.php.exp
File "file_attributes_with_wrong_attribute_type.php", line 3, characters 9-9:
The X attribute cannot be used on a file. (Typing[4231])
File "file_attributes_with_wrong_attribute_type.php", line 5, characters 7-7:
The attribute's class is defined here. To be available for use on a file, the X class must implement HH\FileAttribute.
