hphp/hack/test/typecheck/attributes/file_attributes_with_wrong_attribute_type.php
<?hh

<<file: X(3)>>

class X implements \HH\ClassAttribute {
  public function __construct(public int $x) {}
}
